--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Adem Ghorbel - Portfolio</title>
     <style>
         /* Reset and base styles */
         * {
@@ -196,7 +196,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <div class="nav-brand">Your Name</div>
+            <div class="nav-brand">Adem Ghorbel</div>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
@@ -207,8 +207,8 @@
 
     <section class="hero">
         <div class="container">
-            <h1>Your Name</h1>
-            <p class="subtitle">Software Developer | Web Designer</p>
+            <h1>Adem Ghorbel</h1>
+            <p class="subtitle">Engineer | Strategy Consultant </p>
         </div>
     </section>
 
@@ -216,7 +216,7 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="about-content">
-                <p>Welcome to my portfolio! I'm a passionate software developer with expertise in web development and design. I love creating beautiful and functional websites that solve real-world problems.</p>
+                <p>Welcome to my portfolio! I'm a passionate strategy consultant with expertise in project management and business transformation. I love to solve real-world problems.</p>
             </div>
         </div>
     </section>
@@ -248,7 +248,7 @@
             <h2>Contact Me</h2>
             <form class="contact-form">
                 <div class="form-group">
-                    <input type="text" placeholder="Your Name" required>
+                    <input type="text" placeholder="Adem Ghorbel" required>
                 </div>
                 <div class="form-group">
                     <input type="email" placeholder="Your Email" required>
@@ -263,7 +263,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Adem Ghorbel. All rights reserved.</p>
         </div>
     </footer>
 </body>
