--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <h2>Contact Me</h2>
             <form class="contact-form">
                 <div class="form-group">
-                    <input type="text" placeholder="Adem Ghorbel" required>
+                    <input type="text" placeholder="Your Name" required>
                 </div>
                 <div class="form-group">
                     <input type="email" placeholder="Your Email" required>
