--- a/index.html
+++ b/index.html
@@ -5,108 +5,156 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adem Ghorbel - Portfolio</title>
     <style>
-        /* Reset and base styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        /* Previous styles remain... Adding new styles: */
+        
+        /* Profile Section */
+        .profile-section {
+            padding: 8rem 0 4rem;
+            background: #f8f9fa;
         }
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            line-height: 1.6;
-            color: #333;
-        }
-
-        .container {
-            max-width: 1200px;
+        .profile-container {
+            display: flex;
+            align-items: center;
+            gap: 4rem;
+            max-width: 1000px;
             margin: 0 auto;
             padding: 0 20px;
         }
 
-        /* Navigation */
-        .navbar {
-            background: #2563eb;
-            padding: 1rem 0;
-            position: fixed;
+        .profile-image {
+            flex-shrink: 0;
+            width: 300px;
+            height: 300px;
+            border-radius: 50%;
+            overflow: hidden;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+
+        .profile-image img {
             width: 100%;
-            top: 0;
-            z-index: 1000;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
         }
 
-        .navbar .container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+        .profile-image:hover img {
+            transform: scale(1.05);
         }
 
-        .nav-brand {
-            color: white;
-            font-size: 1.5rem;
-            font-weight: bold;
+        .profile-info {
+            flex: 1;
         }
 
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            transition: opacity 0.3s;
-        }
-
-        .nav-links a:hover {
-            opacity: 0.8;
-        }
-
-        /* Hero Section */
-        .hero {
-            background: linear-gradient(135deg, #2563eb, #1e40af);
-            color: white;
-            padding: 8rem 0 4rem;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-size: 3rem;
+        .profile-info h1 {
+            font-size: 2.5rem;
             margin-bottom: 1rem;
-        }
-
-        .hero .subtitle {
-            font-size: 1.5rem;
-            opacity: 0.9;
-            margin-bottom: 2rem;
-        }
-
-        /* Sections */
-        section {
-            padding: 4rem 0;
-        }
-
-        section h2 {
-            text-align: center;
-            margin-bottom: 2rem;
-            font-size: 2rem;
             color: #1f2937;
         }
 
-        /* About Section */
-        .about {
-            background: #f8f9fa;
+        .profile-tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+            margin: 1rem 0;
         }
 
-        .about-content {
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: center;
+        .profile-tag {
+            background: #2563eb;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            font-size: 0.875rem;
         }
 
-        /* Projects Grid */
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        /* Horizontal Scrolling Projects */
+        .projects-scroll {
+            position: relative;
+            padding: 2rem 0;
+        }
+
+        .projects-container {
+            overflow-x: auto;
+            scroll-behavior: smooth;
+            scrollbar-width: none; /* Firefox */
+            -ms-overflow-style: none; /* IE/Edge */
+            padding: 2rem 0;
+        }
+
+        .projects-container::-webkit-scrollbar {
+            display: none; /* Chrome/Safari/Opera */
+        }
+
+        .projects-track {
+            display: inline-flex;
             gap: 2rem;
+            padding: 0 2rem;
         }
 
         .project-card {
+            flex: 0 0 350px;
+            perspective: 1000px;
+            cursor: pointer;
+        }
+
+        .project-card-inner {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
+        }
+
+        .project-card:hover .project-card-inner {
+            transform: rotateY(180deg);
+        }
+
+        .project-front, .project-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        .project-back {
+            background: white;
+            transform: rotateY(180deg);
+            padding: 1.5rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        /* Scroll Buttons */
+        .scroll-btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: white;
+            border: none;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+            z-index: 10;
+        }
+
+        .scroll-btn.left { left: 1rem; }
+        .scroll-btn.right { right: 1rem; }
+
+        /* Articles Section */
+        .articles-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin-top: 2rem;
+        }
+
+        .article-card {
             background: white;
             border-radius: 8px;
             overflow: hidden;
@@ -114,157 +162,188 @@
             transition: transform 0.3s;
         }
 
-        .project-card:hover {
+        .article-card:hover {
             transform: translateY(-5px);
         }
 
-        .project-image {
+        .article-image {
             width: 100%;
             height: 200px;
-            background-color: #e5e7eb;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            overflow: hidden;
         }
 
-        .project-content {
+        .article-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s;
+        }
+
+        .article-card:hover .article-image img {
+            transform: scale(1.1);
+        }
+
+        .article-content {
             padding: 1.5rem;
         }
 
-        /* Contact Form */
-        .contact-form {
-            max-width: 600px;
-            margin: 0 auto;
+        .article-meta {
+            font-size: 0.875rem;
+            color: #6b7280;
+            margin-bottom: 0.5rem;
         }
 
-        .form-group {
-            margin-bottom: 1rem;
+        .read-more {
+            display: inline-block;
+            margin-top: 1rem;
+            color: #2563eb;
+            text-decoration: none;
+            font-weight: 500;
         }
 
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 0.75rem;
-            border: 1px solid #e5e7eb;
-            border-radius: 4px;
-            font-size: 1rem;
-        }
-
-        .form-group textarea {
-            height: 150px;
-        }
-
-        button {
-            background: #2563eb;
-            color: white;
-            padding: 0.75rem 1.5rem;
-            border: none;
-            border-radius: 4px;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background: #1e40af;
-        }
-
-        /* Footer */
-        footer {
-            background: #1f2937;
-            color: white;
-            padding: 2rem 0;
-            text-align: center;
-        }
-
-        /* Responsive Design */
         @media (max-width: 768px) {
-            .nav-links {
-                display: none;
+            .profile-container {
+                flex-direction: column;
+                text-align: center;
+                gap: 2rem;
             }
 
-            .hero h1 {
-                font-size: 2rem;
-            }
-
-            .hero .subtitle {
-                font-size: 1.2rem;
+            .profile-tags {
+                justify-content: center;
             }
         }
     </style>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <div class="nav-brand">Adem Ghorbel</div>
-            <div class="nav-links">
-                <a href="#about">About</a>
-                <a href="#projects">Projects</a>
-                <a href="#contact">Contact</a>
+    <!-- Navigation remains the same -->
+
+    <section class="profile-section">
+        <div class="profile-container">
+            <div class="profile-image">
+                <img src="path-to-your-image.jpg" alt="Adem Ghorbel">
             </div>
-        </div>
-    </nav>
-
-    <section class="hero">
-        <div class="container">
-            <h1>Adem Ghorbel</h1>
-            <p class="subtitle">Engineer | Strategy Consultant </p>
-        </div>
-    </section>
-
-    <section id="about" class="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <p>Welcome to my portfolio! I'm a passionate strategy consultant with expertise in project management and business transformation. I love to solve real-world problems.</p>
+            <div class="profile-info">
+                <h1>Adem Ghorbel</h1>
+                <p class="subtitle">Senior Software Developer</p>
+                <div class="profile-tags">
+                    <span class="profile-tag">Web Development</span>
+                    <span class="profile-tag">UI/UX Design</span>
+                    <span class="profile-tag">Cloud Architecture</span>
+                </div>
+                <p class="bio">
+                    A passionate developer with 5+ years of experience in building scalable web applications. 
+                    Specialized in frontend development with a strong foundation in backend technologies.
+                </p>
             </div>
         </div>
     </section>
 
-    <section id="projects">
+    <section id="projects" class="projects-scroll">
         <div class="container">
-            <h2>My Projects</h2>
-            <div class="projects-grid">
+            <h2>Featured Projects</h2>
+            <button class="scroll-btn left" onclick="scrollProjects('left')">←</button>
+            <button class="scroll-btn right" onclick="scrollProjects('right')">→</button>
+            <div class="projects-container">
+                <div class="projects-track">
+                    <!-- Project cards will be inserted here -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="articles">
+        <div class="container">
+            <h2>Latest Articles</h2>
+            <div class="articles-grid">
+                <!-- Article cards will be inserted here -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact section and footer remain the same -->
+
+    <script>
+        // Dynamic Project Loading
+        const projects = [
+            {
+                title: "Project 1",
+                image: "project1.jpg",
+                description: "Description of project 1",
+                technologies: ["React", "Node.js", "MongoDB"],
+                link: "#"
+            },
+            // Add more projects...
+        ];
+
+        const articles = [
+            {
+                title: "Article 1",
+                excerpt: "Brief description of the article...",
+                date: "2025-01-01",
+                image: "article1.jpg",
+                link: "articles/article1.html"
+            },
+            // Add more articles...
+        ];
+
+        function createProjectCard(project) {
+            return `
                 <div class="project-card">
-                    <div class="project-image">Project 1 Image</div>
-                    <div class="project-content">
-                        <h3>Project 1</h3>
-                        <p>Description of your first project goes here.</p>
+                    <div class="project-card-inner">
+                        <div class="project-front">
+                            <img src="${project.image}" alt="${project.title}">
+                        </div>
+                        <div class="project-back">
+                            <h3>${project.title}</h3>
+                            <p>${project.description}</p>
+                            <div class="tech-stack">
+                                ${project.technologies.map(tech => `<span>${tech}</span>`).join('')}
+                            </div>
+                            <a href="${project.link}" class="project-link">View Project</a>
+                        </div>
                     </div>
                 </div>
-                <div class="project-card">
-                    <div class="project-image">Project 2 Image</div>
-                    <div class="project-content">
-                        <h3>Project 2</h3>
-                        <p>Description of your second project goes here.</p>
+            `;
+        }
+
+        function createArticleCard(article) {
+            return `
+                <div class="article-card">
+                    <div class="article-image">
+                        <img src="${article.image}" alt="${article.title}">
+                    </div>
+                    <div class="article-content">
+                        <div class="article-meta">${new Date(article.date).toLocaleDateString()}</div>
+                        <h3>${article.title}</h3>
+                        <p>${article.excerpt}</p>
+                        <a href="${article.link}" class="read-more">Read More →</a>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
+            `;
+        }
 
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <form class="contact-form">
-                <div class="form-group">
-                    <input type="text" placeholder="Your Name" required>
-                </div>
-                <div class="form-group">
-                    <input type="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                    <textarea placeholder="Your Message" required></textarea>
-                </div>
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-    </section>
+        function scrollProjects(direction) {
+            const container = document.querySelector('.projects-container');
+            const scrollAmount = 400;
+            container.scrollBy({
+                left: direction === 'left' ? -scrollAmount : scrollAmount,
+                behavior: 'smooth'
+            });
+        }
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Adem Ghorbel. All rights reserved.</p>
-        </div>
-    </footer>
+        // Initialize content
+        document.addEventListener('DOMContentLoaded', () => {
+            const projectsTrack = document.querySelector('.projects-track');
+            const articlesGrid = document.querySelector('.articles-grid');
+
+            projects.forEach(project => {
+                projectsTrack.innerHTML += createProjectCard(project);
+            });
+
+            articles.forEach(article => {
+                articlesGrid.innerHTML += createArticleCard(article);
+            });
+        });
+    </script>
 </body>
 </html>
